# cdpkit

./: README.md  pyproject.toml
.github/workflows/: publish.yml
cdpkit/: __init__.py  common.py  exceptions.py  logger.py
cdpkit/connection/: __init__.py  handler.py  session.py
cdpkit/connection/manager/: __init__.py  commands.py  events.py
cdpkit/exception/: __init__.py  base.py  browser.py  connection.py  generate.py
cdpkit/protocol/: __init__.py  _types.py  base.py
cdpkit/protocol/Accessibility/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Animation/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Audits/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Autofill/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/BackgroundService/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/BluetoothEmulation/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Browser/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/CSS/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/CacheStorage/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Cast/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Console/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DOM/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DOMDebugger/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DOMSnapshot/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DOMStorage/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Debugger/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DeviceAccess/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/DeviceOrientation/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Emulation/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/EventBreakpoints/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Extensions/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/FedCm/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Fetch/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/FileSystem/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/HeadlessExperimental/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/HeapProfiler/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/IO/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/IndexedDB/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Input/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Inspector/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/LayerTree/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Log/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Media/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Memory/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Network/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Overlay/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/PWA/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Page/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Performance/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/PerformanceTimeline/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Preload/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Profiler/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Runtime/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Schema/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Security/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/ServiceWorker/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Storage/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/SystemInfo/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Tethering/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/Tracing/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/WebAudio/: __init__.py  events.py  methods.py  types.py
cdpkit/protocol/WebAuthn/: __init__.py  events.py  methods.py  types.py
doc/: README_cn.md
generator/: _format.py  cdp.py  cdp_generate.py  exceptions.py  format.py  generate.py  logger.py  parse_protocol_to_file.py  run.py  utils.py
